--- a/deployment/src/locales/cn/siteLayout.json
+++ b/deployment/src/locales/cn/siteLayout.json
@@ -1,5 +1,6 @@
 {
     "home": "主页",
     "calculator": "水族计算器",
-    "disclaimer": "该网站为P. mandevillei的个人网站，除非特殊说明，其上所有信息均来源于作者的个人知识。个人转载请注明出处；禁止商用。作者不承诺该网站信息的正确或准确性，请自己做出判断！"
+    "disclaimer": "该网站为P. mandevillei的个人网站，除非特殊说明，其上所有信息均来源于作者的个人知识。个人转载请注明出处；禁止商用。作者不承诺该网站信息的正确或准确性，请自己做出判断！",
+    "scan": "扫码关注公众号"
 }
