--- a/deployment/src/locales/en/siteLayout.json
+++ b/deployment/src/locales/en/siteLayout.json
@@ -1,5 +1,6 @@
 {
     "home": "Home",
     "calculator": "Aquarium Calculator",
-    "disclaimer": "This is a personal website of P. mandevillei. All info is derived from personal knowledge unless otherwise noted. Sharing for personal purposes is welcome as long as it is properly attributed. Commercial use prohibited. The author does not make any promise about the correctness or accuracy of the info presented; use your own judgement!"
+    "disclaimer": "This is a personal website of P. mandevillei. All info is derived from personal knowledge unless otherwise noted. Sharing for personal purposes is welcome as long as it is properly attributed. Commercial use prohibited. The author does not make any promise about the correctness or accuracy of the info presented; use your own judgement!",
+    "scan": "Scan to follow A Nature Sanctuary on WeChat"
 }
