--- a/deployment/src/locales/cn/home.json
+++ b/deployment/src/locales/cn/home.json
@@ -1,3 +1,5 @@
 {
-    "title": "A Nature Sanctuary"
+    "title": "A Nature Sanctuary",
+    "des1": "欢迎来到我的主页！",
+    "des2": "该网站用于分享 P. mandevillei 的自然趣闻。"
 }
