--- a/deployment/src/locales/en/home.json
+++ b/deployment/src/locales/en/home.json
@@ -1,3 +1,5 @@
 {
-    "title": "A Nature Sanctuary"
+    "title": "A Nature Sanctuary",
+    "des1": "Welcome to my homepage!",
+    "des2": "This site is dedicated to everything nature encountered by P. mandevillei."
 }
