--- a/deployment/src/locales/cn/waterChangeCalculator.json
+++ b/deployment/src/locales/cn/waterChangeCalculator.json
@@ -46,6 +46,9 @@
     "deleteThis": "删除该格子",
     "sure": "你确定要把这个格子删掉吗？",
     "cancel": "取消",
-    "delete": "删除"
+    "delete": "删除",
+
+    "reference": "计算公式参考：",
+    "refTitle": "换水那些事儿"
 
 }
