--- a/deployment/src/locales/en/home.json
+++ b/deployment/src/locales/en/home.json
@@ -1,5 +1,7 @@
 {
     "title": "A Nature Sanctuary",
     "des1": "Welcome to my homepage!",
-    "des2": "This site is dedicated to everything nature encountered by P. mandevillei."
+    "des2": "This site is dedicated to everything nature encountered by P. mandevillei.",
+    "updates": "Latest",
+    "1": "Water Change Calculator"
 }
