--- a/deployment/src/locales/en/siteLayout.json
+++ b/deployment/src/locales/en/siteLayout.json
@@ -2,5 +2,6 @@
     "home": "Home",
     "calculator": "Aquarium Calculator",
     "disclaimer": "This is a personal website of P. mandevillei. All info is derived from personal knowledge unless otherwise noted. Sharing for personal purposes is welcome as long as it is properly attributed. Commercial use prohibited.",
-    "scan": "Scan to follow A Nature Sanctuary on WeChat"
+    "scan": "Scan to follow A Nature Sanctuary on WeChat",
+    "edit": "Last Edit: "
 }
