--- a/deployment/src/locales/cn/home.json
+++ b/deployment/src/locales/cn/home.json
@@ -1,5 +1,7 @@
 {
     "title": "A Nature Sanctuary",
     "des1": "欢迎来到我的主页！",
-    "des2": "该网站用于分享 P. mandevillei 的自然趣闻。"
+    "des2": "该网站用于分享 P. mandevillei 的自然趣闻。",
+    "updates": "最新",
+    "1": "换水计算器"
 }
