--- a/deployment/src/locales/en/waterChangeCalculator.json
+++ b/deployment/src/locales/en/waterChangeCalculator.json
@@ -49,6 +49,7 @@
     "delete": "Delete",
 
     "reference": "Calculation referenced from: ",
-    "refTitle": "Water Change Trivia"
+    "refTitle": "Water Change Trivia",
+    "back": "back"
 
 }
