--- a/deployment/src/locales/en/aquariumCalculator.json
+++ b/deployment/src/locales/en/aquariumCalculator.json
@@ -1,4 +1,5 @@
 {
     "title": "Aquarium Calculator",
-    "waterChange": "Water Change Calculator"
+    "waterChange": "Water Change Calculator",
+    "unitConverter": "Unit Converter"
 }
