changed backend service

--- a/deployment/src/locales/en/siteLayout.json
+++ b/deployment/src/locales/en/siteLayout.json
@@ -4,5 +4,6 @@
     "disclaimer": "This is a personal website of P. mandevillei. All info is derived from personal knowledge unless otherwise noted. Sharing for personal purposes is welcome as long as it is properly attributed. Commercial use prohibited.",
     "scan": "Scan to follow A Nature Sanctuary on WeChat",
     "edit": "Last Edit: ",
-    "noConnection": "Lost database connection; refresh to retry"
+    "connecting": "Contacting database...",
+    "noConnection": "Lost database connection; click to retry"
 }
