--- a/deployment/src/locales/en/home.json
+++ b/deployment/src/locales/en/home.json
@@ -3,5 +3,6 @@
     "des1": "Welcome to my homepage!",
     "des2": "This site is dedicated to everything nature encountered by P. mandevillei.",
     "updates": "Latest",
-    "1": "Water Change Calculator"
+    "1": "Water Change Calculator",
+    "2": "Blind Trust in Experience is Toxic (Literally)"
 }
