--- a/deployment/src/locales/cn/siteLayout.json
+++ b/deployment/src/locales/cn/siteLayout.json
@@ -1,6 +1,8 @@
 {
     "home": "主页",
     "calculator": "水族计算器",
+    "about": "关于",
+    "focus": "专栏",
     "disclaimer": "该网站为P. mandevillei的个人网站，除非特殊说明，其上所有信息均来源于作者的个人知识。个人转载请注明出处；禁止商用。",
     "scan": "扫码关注公众号",
     "edit": "最后编辑：",
