--- a/deployment/src/locales/cn/home.json
+++ b/deployment/src/locales/cn/home.json
@@ -3,6 +3,7 @@
     "des1": "欢迎来到我的主页！",
     "des2": "该网站用于分享 P. mandevillei 的自然趣闻。",
     "updates": "最新",
-    "1": "换水计算器",
-    "2": "经验主义有毒！"
+    "1": "换水计算器（稳态）",
+    "2": "专栏：经验主义有毒！",
+    "3": "换水计算器（浓度调节）"
 }
