--- a/deployment/src/locales/cn/waterChangeLevelAdjustment.json
+++ b/deployment/src/locales/cn/waterChangeLevelAdjustment.json
@@ -1,7 +1,7 @@
 {
-    "title": "换水计算器（稳态）",
-    "nav1": "注意：这是用于计算长时间稳定换水趋近的稳定状态的计算器。如果你想要计算单次换水的浓度变化，请前往 ",
-    "nav2": "换水计算器（浓度调节）。",
+    "title": "换水计算器（浓度调节）",
+    "nav1": "注意：这是用于计算单次换水浓度变化的计算器。如果你想要计算长时间稳定换水趋近的稳定状态，请前往 ",
+    "nav2": "换水计算器（稳态）。",
     "des1": "点击",
     "des2": "来新建一个计算格，并自定义名字和单位。",
     "des3": "",
@@ -17,21 +17,14 @@
     "mode2": "边放边加",
     "mode3": "先加后放",
     "convert": "变化率换算",
-    "convertDes": "因为变化率通常比较小，足够长的观察时间会使计算更准确",
-    "level": "浓度",
-    "days": "天数",
-    "unit1": "任意单位/{{number}} 天",
-    "unit2": "任意单位/月",
     "unitReminder": "注意：以下计算只能使用浓度单位（如ppm、%、dKH等）。海水比重是一个不适用于该计算器的例子。",
 
     "name": "物质名称",
     "unit": "单位",
     "s": "水源 [{{name}}]",
-    "x": "缸内 [{{name}}] 变化率，负数表示下降",
-    "m": "缸内稳态 [{{name}}]",
+    "x": "缸内目前 [{{name}}]",
+    "m": "缸内目标 [{{name}}]",
     "y": "换水率",
-    "month": "月",
-    "week": "周",
     "calc": "计算",
     "updateName": "更新物质名称",
     "updateUnit": "更新单位",
@@ -43,8 +36,7 @@
     "infinite": "换水率：无穷大",
     "impossible": "不可能达到的目标！",
     "invalid": "请选择换水模式",
-    "ssUnreachable": "不可能达到稳态。记得换水鸭！",
-    "ssUnreachable2": "不可能达到稳态。",
+    "reminder": "要记得换水鸭！",
 
     "deleteThis": "删除该格子",
     "sure": "你确定要把这个格子删掉吗？",
