--- a/deployment/src/locales/en/home.json
+++ b/deployment/src/locales/en/home.json
@@ -3,6 +3,7 @@
     "des1": "Welcome to my homepage!",
     "des2": "This site is dedicated to everything nature encountered by P. mandevillei.",
     "updates": "Latest",
-    "1": "Water Change Calculator",
-    "2": "Blind Trust in Experience is Toxic (Literally)"
+    "1": "Water Change Calculator (Steady State)",
+    "2": "FOCUS: Blind Trust in Experience is Toxic (Literally)",
+    "3": "Water Change Calculator (Level Adjustment)"
 }
