--- a/deployment/src/locales/en/siteLayout.json
+++ b/deployment/src/locales/en/siteLayout.json
@@ -3,7 +3,7 @@
     "calculator": "Aquarium Calculator",
     "about": "About",
     "focus": "Focus",
-    "disclaimer": "This is a personal website of P. mandevillei. All info is derived from personal knowledge unless otherwise noted. Sharing for personal purposes is welcome as long as it is properly attributed. Commercial use prohibited.",
+    "disclaimer": "© 2025 P-mandevillei. Content licensed under CC BY-NC-ND 4.0 and code under the MIT license. Sharing for personal purposes is welcome as long as properly attributed. Commercial use prohibited.",
     "scan": "Scan to follow A Nature Sanctuary on WeChat",
     "edit": "Last Edit: ",
     "connecting": "Contacting database...",
