--- a/deployment/src/locales/en/waterChangeLevelAdjustment.json
+++ b/deployment/src/locales/en/waterChangeLevelAdjustment.json
@@ -1,7 +1,7 @@
 {
-    "title": "Water Change Calculator (Steady State)",
-    "nav1": "Note: This is for steady state levels approached by long-term consistent water changes. If you were looking for the effects of a single water change, please go to ",
-    "nav2": "Water Change Calculator (Level Adjustment).",
+    "title": "Water Change Calculator (Level Adjustment)",
+    "nav1": "Note: This is for the effects of a single water change. If you were looking for the steady state levels approached by long-term consistent water changes, please go to ",
+    "nav2": "Water Change Calculator (Steady State).",
     "des1": "Click the",
     "des2": "to add a new block, and define its name and unit.",
     "des3": "Calculate",
@@ -16,22 +16,14 @@
     "mode1": "Remove Old ➡️ Add New",
     "mode2": "Remove While Adding",
     "mode3": "Add New ➡️ Remove Old",
-    "convert": "Rate of Change Conversion",
-    "convertDes": "Since ROC is usually small, a longer period of observation would increase calculation accuracy.",
-    "level": "Level",
-    "days": "# days",
-    "unit1": "arbitrary unit/{{number}} days",
-    "unit2": "arbitrary unit/month",
     "unitReminder": "One caveat: the calculations work only for CONCENTRATION UNITS (like ppm, %, or dKH). An example where they FAIL is for specific gravity.",
 
     "name": "name",
     "unit": "unit",
     "s": "Source [{{name}}]",
-    "x": "In-tank [{{name}}] ROC, negative for decrease",
-    "m": "In-tank [{{name}}] Steady State",
+    "x": "Current in-tank [{{name}}]",
+    "m": "Target in-tank [{{name}}]",
     "y": "Water Change",
-    "month": "month",
-    "week": "week",
     "calc": "Calculate",
     "updateName": "Update Substance Name",
     "updateUnit": "Update Unit",
@@ -43,8 +35,7 @@
     "infinite": "Water Change: infinite",
     "impossible": "Impossible goal!",
     "invalid": "Invalid Mode.",
-    "ssUnreachable": "Steady State unreachable. You should remember to change your water!",
-    "ssUnreachable2": "Steady State unreachable.",
+    "reminder": "Please change your water ;(",
 
     "deleteThis": "Delete This Block",
     "sure": "Are you sure you want to delete this block?",
