--- a/deployment/src/locales/cn/home.json
+++ b/deployment/src/locales/cn/home.json
@@ -1,7 +1,7 @@
 {
     "title": "A Nature Sanctuary",
-    "des1": "欢迎来到我的主页！",
-    "des2": "该网站用于分享 P. mandevillei 的自然趣闻。",
+    "des1": "水族箱和雨林缸的科学维护",
+    "des2": "点击上方的导览开始探索",
     "updates": "最新",
     "1": "换水计算器（稳态）",
     "2": "专栏：经验主义有毒！",
