--- a/deployment/src/locales/cn/waterChangeCalculator.json
+++ b/deployment/src/locales/cn/waterChangeCalculator.json
@@ -11,7 +11,8 @@
     "des7": "只要你不清空浏览器内存，所有数据均会被",
     "des8": "保存",
     "des9": "。",
-    "modeSelect": "选择模式：",
+    "des10": "用负的变化率来代表浓度降低。",
+    "modeSelect": "选择模式",
     "default": "换水模式",
     "mode1": "先放后加",
     "mode2": "边放边加",
@@ -27,7 +28,7 @@
     "name": "物质名称",
     "unit": "单位",
     "s": "水源 [{{name}}]",
-    "x": "缸内 [{{name}}] 变化率，负数表示下降",
+    "x": "缸内 [{{name}}] 变化率",
     "m": "缸内稳态 [{{name}}]",
     "y": "换水率",
     "month": "月",
