--- a/deployment/src/locales/en/home.json
+++ b/deployment/src/locales/en/home.json
@@ -1,7 +1,7 @@
 {
     "title": "A Nature Sanctuary",
-    "des1": "Welcome to my homepage!",
-    "des2": "This site is dedicated to everything nature encountered by P. mandevillei.",
+    "des1": "Keeping Aquariums and Vivariums Scientifically",
+    "des2": "Start exploring with the nav bar on top",
     "updates": "Latest",
     "1": "Water Change Calculator (Steady State)",
     "2": "FOCUS: Blind Trust in Experience is Toxic (Literally)",
