--- a/deployment/src/locales/en/waterChangeCalculator.json
+++ b/deployment/src/locales/en/waterChangeCalculator.json
@@ -11,12 +11,13 @@
     "des7": "Everything is",
     "des8": "stored",
     "des9": "until you clear your browser's memory.",
-    "modeSelect": "Select Mode: ",
+    "des10": "ROC stands for Rate of Change, and can be negative for decreasing levels.",
+    "modeSelect": "Select Mode",
     "default": "Mode of Water Change",
     "mode1": "Remove Old ➡️ Add New",
     "mode2": "Remove While Adding",
     "mode3": "Add New ➡️ Remove Old",
-    "convert": "Rate of Change Conversion",
+    "convert": "ROC Conversion",
     "convertDes": "Since ROC is usually small, a longer period of observation would increase calculation accuracy.",
     "level": "Level",
     "days": "# days",
@@ -27,7 +28,7 @@
     "name": "name",
     "unit": "unit",
     "s": "Source [{{name}}]",
-    "x": "In-tank [{{name}}] ROC, negative for decrease",
+    "x": "In-tank [{{name}}] ROC",
     "m": "In-tank [{{name}}] Steady State",
     "y": "Water Change",
     "month": "month",
