--- a/deployment/src/locales/cn/siteLayout.json
+++ b/deployment/src/locales/cn/siteLayout.json
@@ -3,7 +3,7 @@
     "calculator": "水族计算器",
     "about": "关于",
     "focus": "专栏",
-    "disclaimer": "© 2025 P-mandevillei。该网站内容受 CC BY-NC-ND 4.0 国际许可协议保护，代码则遵循 MIT 许可协议。个人转载请注明出处；禁止商用。",
+    "disclaimer": "© 2025 P-mandevillei. 该网站内容受 CC BY-NC-ND 4.0 国际许可协议保护，代码则遵循 MIT 许可协议。个人转载请注明出处；禁止商用。",
     "scan": "扫码关注公众号",
     "edit": "最后编辑：",
     "connecting": "正在访问数据库...",
