--- a/deployment/src/locales/cn/waterChangeLevelAdjustment.json
+++ b/deployment/src/locales/cn/waterChangeLevelAdjustment.json
@@ -1,9 +1,10 @@
 {
     "title": "换水计算器（浓度调节）",
+    "ins": "说明",
     "nav1": "注意：这是用于计算单次换水浓度变化的计算器。如果你想要计算长时间稳定换水趋近的稳定状态，请前往 ",
     "nav2": "换水计算器（稳态）。",
-    "des1": "点击",
-    "des2": "来新建一个计算格，并自定义名字和单位。",
+    "des1": "点击“",
+    "des2": "”来新建一个计算格，并自定义名字和单位。",
     "des3": "",
     "des4": "用",
     "des5": "任意三个",
