--- a/deployment/src/locales/en/waterChangeLevelAdjustment.json
+++ b/deployment/src/locales/en/waterChangeLevelAdjustment.json
@@ -1,15 +1,16 @@
 {
     "title": "Water Change Calculator (Level Adjustment)",
+    "ins": "Instructions",
     "nav1": "Note: This is for the effects of a single water change. If you were looking for the steady state levels approached by long-term consistent water changes, please go to ",
     "nav2": "Water Change Calculator (Steady State).",
-    "des1": "Click the",
-    "des2": "to add a new block, and define its name and unit.",
-    "des3": "Calculate",
-    "des4": "the unknown from",
-    "des5": "any three",
+    "des1": "Click the \"",
+    "des2": "\" to add a new block, and define its name and unit.",
+    "des3": "Calculate ",
+    "des4": "the unknown from ",
+    "des5": "any three ",
     "des6": "given quantities.",
-    "des7": "Everything is",
-    "des8": "stored",
+    "des7": "Everything is ",
+    "des8": "stored ",
     "des9": "until you clear your browser's memory.",
     "modeSelect": "Select Mode: ",
     "default": "Mode of Water Change",
